<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_PermIntlk_cfg" Id="{76cd258e-3d05-4a21-b234-3864f083c450}">
    <Declaration><![CDATA[TYPE ST_PermIntlk_cfg :
STRUCT
    Name : STRING(80);                      // Name for the entire permissive set
    Desc : ARRAY [0..15] OF STRING(80);       // Descriptions for each bit
    BypassPermissives : INT;                  // Bypass bits: if a bit is 1, that permissive is bypassed
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>