<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="SM_HMI" Id="{ad40d3b3-bba5-4f11-8402-744cda020f59}">
    <Declaration><![CDATA[TYPE SM_HMI :
STRUCT
  cfg : SM_HMI_cfg;
  ocmd : SM_HMI_ocmd;
  sts : SM_HMI_sts;
  NextStatePerms : ST_PermIntlk_HMI;
  ActiveStepHMI : ST_PermIntlk_HMI;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>