<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="SM_HMI_sts" Id="{4859f83e-5548-4ec2-846c-407f795380e3}">
    <Declaration><![CDATA[TYPE SM_HMI_sts :
STRUCT
  Automatic : BOOL;
  Manual : BOOL;
  StepMode : BOOL;
  Homing : BOOL;
  Homed : BOOL;
  Running : BOOL;
  Complete : BOOL;
  Stopping : BOOL;
  Stopped : BOOL;
  Aborting : BOOL;
  Aborted : BOOL;
  Pausing : BOOL;
  Paused : BOOL;
  Proceeding : BOOL;
  Faulted : BOOL;
  ChildFaulted : BOOL;
  ReadyToHome : BOOL;
  ReadyToProceed : BOOL;
  ReadyToStart : BOOL;
  AutoStartRequest : BOOL;
  AutoCycleRequest : BOOL;
  Blocked : BOOL;
  Starved : BOOL;
  Mode : DINT;
  Step : DINT;
  NextStep : DINT;
  ReturnNextStep : DINT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>